# TETFIT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindBLAZE.cmake  FindBOOST.cmake  FindEIGEN.cmake  FindGSL.cmake  FindReadline.cmake  FindSILO.cmake
main/: main.cpp
run/: .gitignore  buildparser.sh  dga_input.fdtd  dga_input.txt  fdtd_uniud.xml  getgeo.sh  getgeoandrun.sh  input.txt  run.sh  run_clean.sh  scripting_language_syntax_coloring.scm  unit_tet_input.fdtd
src/: CMakeLists.txt
src/DGA/: BoundaryCondition.hpp  CMakeLists.txt  ConjugateGradientSolver.hpp  Discretization.hpp  Material.hpp  Mesh.hpp  NetgenMesh.hpp  Output.hpp  Simulation.hpp  Solid.hpp  Source.hpp  Utilities.hpp  bessel.cpp  bessel.h  dga_main.cpp  sgnint32_t.hpp
src/DGA/main/: dga_main.cpp
src/FIT/: CMakeLists.txt  Hfield.hpp  fit_main.cpp  mesher.hpp  parser.cpp  postamble.cpp  preamble.cpp
src/FIT/main/: fit_main.cpp
src/agmg/: CMakeLists.txt  agmg.hpp
src/cmake/: FindBLAS_LAPACK.cmake  FindMKL.cmake  FindPETSc.cmake  FindParalution.cmake  FindSILO.cmake  FindSPECTRA.cmake  FindSuiteSparse.cmake
src/fdtd/: CMakeLists.txt  Efield.hpp  fdtd.cpp  fdtd.hpp
src/main/: CMakeLists.txt  main.cpp
src/mesher/: CMakeLists.txt  mesher.cpp  mesher.hpp  parser.exe.stackdump  postamble.cpp  preamble.cpp
src/utils/: CMakeLists.txt  burkardt.h  tetrahedron_properties.h  timecounter.h
tetfit/: BoundaryCondition.hpp  Discretization.hpp  Discretization_old.hpp  Material.hpp  Mesh.hpp  Output.hpp  Simulation.hpp  Solid.hpp  Source.hpp
utils/: CMakeLists.txt  ConjugateGradientSolver.hpp  Seb.h  Utilities.hpp  bessel.cpp  bessel.h  burkardt.h  sgnint32_t.hpp  tetrahedron_properties.h
